add background de changement

--- a/starter/index.html
+++ b/starter/index.html
@@ -333,7 +333,7 @@
     <!-- end form -->
   </section>
   <!-- changement -->
-  <div id="" class="flex flex-wrap gap-4 p-4 bg-gray-800 text-white rounded-lg mt-8">
+  <div   style="background-image: url('./assets/img/changement.jpg'); background-repeat: no-repeat; background-size: 100%;" class="flex flex-wrap gap-4 p-4 bg-gray-800 text-white rounded-lg mt-8">
     <div id="changement" style="background-image: url('./assets/img/badge_gold.webp');
     background-size: cover;
     width: 150px;
